# shift-reduce-parser

./: .gitignore  CMakeLists.txt  README.md  READMEen.md  dump.txt
examples/: main.ypp
inc/: ast.hpp  grammar.hpp  lexer.hpp  parser.hpp  shift_reduce.hpp  sr_verbose_support.hpp
inc/concrete/arithm/: ast.hpp  grammar.hpp
inc/liblexer/: lexer.hpp
rules/: lexer.l
src/: ast_dump.cpp  lexer.cpp  main.cpp  shift_reduce.cpp  sr_verbose_support.cpp
